<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.example.task4_android_dounews_kotlin.model.entities.ArticleUi" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewGroup_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless">

            <ImageView
                android:id="@+id/iv_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/news_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/iv_selected_news"
                app.isSelected="@{article.selected}"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/background_icon"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_tags"
                tools:src="@drawable/ic_bookmark_border" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/field_margin"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@{article.title}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_title"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title_news" />

            <ImageView
                android:id="@+id/iv_author"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/field_margin"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:src="@drawable/ic_account" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/field_margin"
                android:text="@{article.authorName}"
                app:layout_constraintBottom_toBottomOf="@+id/iv_author"
                app:layout_constraintEnd_toStartOf="@+id/tv_page_views"
                app:layout_constraintStart_toEndOf="@+id/iv_author"
                app:layout_constraintTop_toTopOf="@+id/iv_author"
                app:layout_constraintVertical_bias="0.562"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_page_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/field_margin"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@{Integer.toString(article.pageviews)}"
                app:drawableStartCompat="@drawable/ic_preview"
                app:layout_constraintBottom_toBottomOf="@+id/iv_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_author"
                tools:text="@string/count" />

            <TextView
                android:id="@+id/tv_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/field_margin"
                android:text="@{article.tags}"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_title"
                app:layout_constraintTop_toBottomOf="@+id/iv_author"
                tools:text="@string/tags" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/field_margin"
                android:text="@{article.date}"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_selected_news"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_title"
                tools:text="@string/date" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <ProgressBar
            android:id="@+id/pb_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </androidx.cardview.widget.CardView>
</layout>